force-app/main/default/objects/Client_Priority__c/Client_Priority__c.object-meta.xml
<CustomObject>
    <label>Client Priority</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Priority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>