force-app/main/default/objects/Client_Priority__c/fields/Client_Priority__c.field-meta.xml
<CustomField>
    <fullName>Client_Priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Priority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>