force-app/main/default/objects/Client_Priority__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD</label>
    <referenceTo>EBD__c</referenceTo>
    <relationshipLabel>Client Priorities</relationshipLabel>
    <relationshipName>Client_Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>