force-app/main/default/objects/Client_Priority__c/fields/UHG_Strategy__c.field-meta.xml
<CustomField>
    <fullName>UHG_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHG Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>